--- a/app/views/item/create.htm
+++ b/app/views/item/create.htm
@@ -1,31 +1,70 @@
 <form action="{{ @BASE.'/item/create' }}" method="post"  class="form-horizontal">
   <div class="form-group">
-    <label class="control-label col-sm-2" for="code">Item Code:</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="code" name="code" value="">
+    <label class="control-label col-sm-2" for="brand_code">Brand:</label>
+    <div class="col-sm-10"> 
+      <select class="form-control" id="brand_code" name="brand_code">
+        <repeat group="{{ @brands }}" value="{{ @brand }}">
+             <option value="{{ @brand.code }},{{ @brand.prefix }}">
+               {{ @brand.name }}
+             </option>
+        </repeat>        
+      </select>      
     </div>
   </div>
   <div class="form-group">
+    <label class="control-label col-sm-2" for="extension">Extension:</label>
+    <div class="col-sm-10"> 
+      <select class="form-control" id="extension" name="extension">
+        <option value="">Select an extension</option>
+        <repeat group="{{ @extensions }}" value="{{ @extension }}">
+             <option value="{{ @extension.extension }}">
+               {{ @extension.description }}
+             </option>
+        </repeat>        
+      </select>      
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="language">Language:</label>
+    <div class="col-sm-10"> 
+      <select class="form-control" id="language" name="language">
+        <option value="">Select an language</option>
+        <repeat group="{{ @languages }}" value="{{ @language }}">
+             <option value="{{ @language.language }}">
+               {{ @language.description }}
+             </option>
+        </repeat>        
+      </select>      
+    </div>
+  </div>  
+  <div class="form-group">
     <label class="control-label col-sm-2" for="description">Description:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="description" name="description" value="">
+      <textarea class="form-control" id="description" name="description" value=""></textarea>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="code">Item Code:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="code" name="code" value="{{@brands[0].new_number}}" readonly="readonly">
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="barcode">Barcode:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="barcode" name="barcode" value="">
+      <input type="text" class="form-control" id="barcode" name="barcode" value="" readonly="readonly">
     </div>
   </div>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="control-label col-sm-2" for="upc">Created Date:</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="createdate" name="createdate" value="">
     </div>
-  </div>    
+  </div>     -->
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">       
        <input type="hidden" name="create" value="create" />
+       <input type="hidden" class="form-control" id="createdate" name="createdate" value="">
        <a href="{{ @BASE.'/items' }}" class="btn btn-primary">Back To List</a>
        <button type="submit" class="btn btn-primary pull-right">Add Item</button>
     </div>
