--- a/app/views/item/list.htm
+++ b/app/views/item/list.htm
@@ -14,10 +14,11 @@
        >
     <thead>    
     <tr class="row">
-            <th data-field="code"  data-sortable="true"  class="col-sm-2">Item Code</th>              
-            <th data-field="description"  data-sortable="true" class="col-sm-4">Description</th>
+            <th data-field="code"  data-sortable="true"  class="col-sm-1">Item Code</th>              
+            <th data-field="description"  data-sortable="true" class="col-sm-3">Description</th>
             <th data-field="barcode"  data-sortable="true"  class="col-sm-2">UPC</th>         
-            <th data-field="createdate"  data-sortable="true"  class="col-sm-2">Created Date</th>         
+            <th data-field="createdate"  data-sortable="true"  class="col-sm-2">Created Date</th> 
+            <th data-field="updatedate"  data-sortable="true"  class="col-sm-2">Updated Date</th>         
             <check  if="{{ @role != 2 }}" class="col-sm-2">
                 <th data-formatter="operateFormatter">Action</th>
             </check>
