--- a/app/views/item/update.htm
+++ b/app/views/item/update.htm
@@ -2,31 +2,38 @@
   <div class="form-group">
     <label class="control-label col-sm-2" for="code">Item Code:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="code" name="upc" value="{{ @POST.code }}">
+      <input type="text" class="form-control" id="code" name="upc" value="{{ @POST.code }}" readonly="readonly">
     </div>
-  </div>
-  <div class="form-group">
-    <label class="control-label col-sm-2" for="description">Description:</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="description" name="description" value="{{ @POST.description }}">
-    </div>
-  </div>
+  </div>  
   <div class="form-group">
     <label class="control-label col-sm-2" for="barcode">Barcode:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="barcode" name="barcode" value="{{ @POST.barcode }}">
+      <input type="text" class="form-control" id="barcode" name="barcode" value="{{ @POST.barcode }}" readonly="readonly">
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="upc">Created Date:</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="createdate" name="createdate" value="{{ @POST.createdate }}">
+      <input type="text" class="form-control" id="createdate" name="createdate" value="{{ @POST.createdate }}" readonly="readonly">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="upc">Updated Date:</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="updatedate" name="updatedate" value="{{ @POST.updatedate }}" readonly="readonly">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="description">Description:</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" id="description" name="description">{{ @POST.description }}</textarea>
     </div>
   </div>    
   <div class="form-group"> 
     <div class="col-sm-offset-2 col-sm-10">
        <input type="hidden" name="id" value="{{ @POST.id }}" />
        <input type="hidden" name="update" value="update" />
+       <input type="hidden" class="form-control" id="updatedate" name="updatedate" value="{{@date_now}}">
        <a href="{{ @BASE.'/items' }}" class="btn btn-primary">Back To List</a>
        <button type="submit" class="btn btn-primary pull-right">Update</button>
     </div>
