--- a/app/views/item/create.htm
+++ b/app/views/item/create.htm
@@ -3,9 +3,9 @@
     <label class="control-label col-sm-2" for="brand_code">Brand:</label>
     <div class="col-sm-10"> 
       <select class="form-control" id="brand" name="brand">
-        <option value="" disabled="disabled">-Choose-</option>
+        <!-- <option value="" disabled="disabled">-Choose-</option> -->
         <repeat group="{{ @brands }}" value="{{ @brand }}">
-             <option value="{{ @brand.id }},{{ @brand.code }},{{ @brand.prefix }},{{ @brand.new_number }}">
+             <option value="{{ @brand.id }},{{ @brand.code }},{{ @brand.prefix }},{{ @brand.new_number }}" <check if="{{ @brand.new_number == @brand.last_number }}">disabled="disabled"</check>>
                {{ @brand.name }}
              </option>
         </repeat>        
